주문 부분 취소 API 구현 및 주문 전체 취소 API 리팩토링 (#289)
## Summary

> 이 `PR`에서 `제공`하는 `솔루션`과 그 `설계 의도`를 설명해 주세요. _( like 흑백요리사 )_
> `변경사항`이 필요한 이유, 즉 `컨텍스트` 와 해결하려는 `문제의 핵심`을 `요약`하고, `리뷰어`가 `어떤 관점`에서
봐줬으면 좋겠는지 명시해주세요.

- 주문 전체 취소 및 부분 취소 API 구현
- 취소 플로우를 취소 요청 → (결제 취소) → 취소 확정 2단계로 분리
- 주문/아이템 상태 체계 세분화 및 Order 애그리게이트 중심 도메인 재구성

**주문/아이템 상태 전이 요약**
```
  OrderItemStatus                    OrderStatus
  ───────────────                    ───────────
  CREATED ──┬──(전체취소/즉시)──► CANCELED      CREATED
             │                                    │ paid()
  PAID ──────┤                                    ▼
             │  canceling()                      PAID
             └──────────────────► CANCELING       │ cancelAll()
                                      │       ┌───┴──────────────────┐
                   completeCancel()   │       │ CREATED → CANCELED   │
                           ┌──────────┘       │ PAID → CANCELING     │
                           ▼                  └──────────────────────┘
                        CANCELED                      │
                                              CANCELING / PARTIAL_CANCELING
                   failCancel()                       │
                           └──────────────────► PAID 롤백
                                           CANCELED / PARTIAL_CANCELED
  CONFIRMED ◄── (확정 처리)

```

---

## What's Changed

> `PR`에서 `변경되는 점`들을 설명해 주세요. `UI 변경`이 있다면 `스크린샷`을 첨부해주세요.
### 기능
#### 1. 전체 취소 (DELETE /orders/{orderId})
```
 Client
    │
    │  DELETE /orders/{orderId}
    │  X-Idempotency-Key: {uuid}
    ▼
  OrderController.cancelOrder()
    │
    ▼
  OrderService.requestCancelOrder()
    │
    ├─ [CANCELING] ──────────────────────────────► ResultCode.IN_PROGRESS (200)
    │
    ├─ [CANCELED] ───────────────────────────────► ResultCode.ALREADY_PROCESSED (200)
    │
    ▼
  Order.cancelAll()
    │
    ├─ [CREATED] ─────────────────────────────────────────────────────┐
    │    아이템 전체 → OrderItem.canceled()                         